# engine-1

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  autoexec.cfg  build.bash  build.json  build_system.txt  client.cfg  cmake_install.cmake  coding_practice.txt  configure  configure.ac  custom_binary.json  extra.cfg  game-elite.txt  game-quake3.txt  mesh-file-format.txt  plan.txt  server.cfg  toolchain-mingw64.cmake
autom4te.cache/: output.0  requests  traces.0  traces.1
base/: autoexec.cfg  untitled.glb  untitled.mtl
base/blender/: terrain10.blend  terrain10.mtl
base/extra/: extra.cfg
base/lua/client/: cmain.lua  keys.lua
base/lua/common/: common.lua  extra.lua  loadworld.lua
base/lua/server/: smain.lua
game_maze/: autoexec.cfg
game_maze/lua/: cmain.lua  common.lua  keys.lua
game_maze/shaders/: cube.frag  cube.vert
game_opensauce26/: autoexec.cfg
game_opensauce26/lua/client/: cmain.lua  gcode.lua  keys.lua
game_opensauce26/lua/common/: common.lua
game_opensauce26/models/: airliner.mtl
game_opensauce26/scripts/: transpile_initial.py
game_opensauce26/shaders/: default.frag  default.vert  transparent.frag  transparent.vert
game_sandbox/: autoexec.cfg  client.cfg  server.cfg
game_sandbox/blender/: cube.blend  cube.mtl  plane.blend  sandbox.blend
game_sandbox/lua/: cmain.lua  common.lua  smain.lua
game_sandbox/lua/client/: cmain.lua  keys.lua
game_sandbox/lua/common/: common.lua  loadworld.lua
game_sandbox/lua/server/: smain.lua
game_sandbox/shaders/: cube.vert
games/: game-0.txt  game-1.txt  game-befunge.txt  game-elite.txt  game-quake3.txt  game-rts.txt  game-sandbox.txt
scripts/: makepak.py  obj2cmsh.py  obj2rmsh.py
scripts/error/: error.py
scripts/parseobj/: parseobj.py
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/SDL-release-2.32.8/: CMakeLists.txt
src/cgame/: cmain.lua
src/client/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cmain.c  cmake_install.cmake  cnetwork.c  cnetwork.h  input.c  input.h  lua_client.c  lua_client.h  main.c  main.lua  material.c  material.h  named_pipe.c  named_pipe.h  render.c  render.h  shader.c  shader.h  stb_image.h
src/common/: CMakeLists.txt  Makefile  allocator.c  allocator.h  arena.c  arena.h  array.c  array.h  cfg.c  cfg.h  cfg2.c  cfg2.h  cmake_install.cmake  common.c  common.h  entity.c  entity.h  file.c  file.h  insane.c  log.c  log.h  lua_client.c  lua_common.c  lua_common.h  lua_sandbox.c  lua_sandbox.h  lua_sqlite.c  lua_sqlite.h  memory.c  memory.h  network.c  network.h  obj.c  obj.h  pak.s  parse_mesh.c  parse_mesh.h  random.c  random.h  (+15 more)
src/enet-1.3.18/include/enet/: enet.h
src/glew-2.3.0/auto/extensions/gl/: GL_EXT_direct_state_access
src/lua-5.4.8/: CMakeLists.txt  LICENSE
src/physfs-3.0.2/: CMakeLists.txt
src/runner/: CMakeLists.txt  main.cpp  runner_en_US.ts  runnerwindow.cpp  runnerwindow.h  runnerwindow.ui
src/server/: CMakeLists.txt  Makefile  cmake_install.cmake  lua_server.c  lua_server.h  server.h  smain.c  snetwork.c  snetwork.h
src/sgame/: extra.lua  smain.lua
src/sqlite/: CMakeLists.txt
workspace/game_sandbox/: server.db
workspace/sandbox/: secrets.db  server.db
